[package]
name = "range"
version = "0.1.0"
edition = "2021"

[dependencies]
range-methods = { path = "methods" }
# risc0-zkvm = { path = "../../risc0/zkvm" }
# risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.19" }
# risc0-zkvm = { version = "0.19.0" }
risc0-zkvm = { version = "0.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
