[package]
name = "range-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
# risc0-build = { path = "../../../risc0/build" }
# risc0-build = { git = "https://github.com/risc0/risc0", branch = "release-0.19" }
# risc0-build ={ version = "0.19.0" }
risc0-build ={ version = "0.20"}

[package.metadata.risc0]
methods = ["guest"]
