[package]
name = "range"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std"] } 
# risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.19", default-features = false, features = ["std"] }
# risc0-zkvm = { version = "0.19.0", default-features = false, features = ["std"] }
risc0-zkvm = { version = "0.20",  default-features = false, features = ["std"] }
# json = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
